force-app/main/default/objects/Appel_facturation__c/Appel_facturation__c.object-meta.xml
<CustomObject>
    <label>Appel à facturation</label>
    <nameField>
        <label>Nom de Appel à facturation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appels à facturation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>