force-app/main/default/objects/Appel_facturation__c/fields/Commercial_concerne__c.field-meta.xml
<CustomField>
    <fullName>Commercial_concerne__c</fullName>
    <formula>Contrat__r.Commercial__r.FirstName + &quot; &quot;+ Contrat__r.Commercial__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial concerné</label>
    <type>Text</type>
</CustomField>