force-app/main/default/objects/Appel_facturation__c/fields/Contrat__c.field-meta.xml
<CustomField>
    <fullName>Contrat__c</fullName>
    <label>Contrat</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Appels à facturation</relationshipLabel>
    <relationshipName>Appels_facturation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>