force-app/main/default/objects/Appel_facturation__c/fields/Mois_facturation_concerne__c.field-meta.xml
<CustomField>
    <fullName>Mois_facturation_concerne__c</fullName>
    <label>Mois de facturation concerné</label>
    <type>Date</type>
</CustomField>