force-app/main/default/objects/Appel_facturation__c/fields/Motif_decomission__c.field-meta.xml
<CustomField>
    <fullName>Motif_decomission__c</fullName>
    <label>Motif de décomission</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>