force-app/main/default/objects/Appel_facturation__c/fields/Paye__c.field-meta.xml
<CustomField>
    <fullName>Paye__c</fullName>
    <label>Payé</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADE</fullName>
            </value>
            <value>
                <fullName>PEPS</fullName>
            </value>
            <value>
                <fullName>PWE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>