force-app/main/default/objects/Appel_facturation__c/fields/Payeur__c.field-meta.xml
<CustomField>
    <fullName>Payeur__c</fullName>
    <formula>TEXT(Contrat__r.Entite_facturation__c)</formula>
    <label>Payeur</label>
    <type>Text</type>
</CustomField>