force-app/main/default/objects/Appel_facturation__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente de validation ADV</fullName>
                <default>true</default>
                <label>En attente de validation ADV</label>
            </value>
            <value>
                <fullName>OK pour facturation</fullName>
            </value>
            <value>
                <fullName>Appel à facturation émis</fullName>
            </value>
            <value>
                <fullName>En attente de paiement</fullName>
                <isActive>false</isActive>
                <label>En attente de paiement</label>
            </value>
            <value>
                <fullName>Payé</fullName>
                <isActive>false</isActive>
                <label>Payé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>