force-app/main/default/objects/Appel_facturation__c/recordTypes/Commission.recordType-meta.xml
<RecordType>
    <fullName>Commission</fullName>
    <active>true</active>
    <label>Commission</label>
</RecordType>