force-app/main/default/objects/Appel_facturation__c/recordTypes/Decommission.recordType-meta.xml
<RecordType>
    <fullName>Decommission</fullName>
    <active>true</active>
    <label>Décommission</label>
</RecordType>