force-app/main/default/objects/Appel_facturation__c/validationRules/VR_001.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_001</fullName>
    <active>true</active>
    <description>Empêche la modification de l&apos;enregistrement lorsqu&apos;il a été validé</description>
    <errorConditionFormula>AND(NOT(TEXT(PRIORVALUE(Statut__c)) = &quot;En attente de validation ADV&quot;),RecordType.DeveloperName =&apos;Commission&apos;)</errorConditionFormula>
    <errorMessage>Cet appel à facturation n&apos;est plus modifiable</errorMessage>
</ValidationRule>