force-app/main/default/objects/Appel_facturation__c/validationRules/VR_002.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_002</fullName>
    <active>true</active>
    <description>Un appel à facturation de type Commission doit obligatoirement avoir un montant positif.
Un appel à facturation de type Décommission doit obligatoirement avoir un montant négatif.</description>
    <errorConditionFormula>OR(AND(
RecordType.DeveloperName = &quot;Decommission&quot;,Montant__c &gt; 0
),AND(
RecordType.DeveloperName = &quot;Commission&quot;,Montant__c &lt; 0
))</errorConditionFormula>
    <errorMessage>Un montant positif n&apos;est pas autorisé pour cet appel à facturation.</errorMessage>
</ValidationRule>